@@ -19,4 +19,5 @@ Making App Changes
 Change to Functional Components 
 ---------------------------------------------------------------------------------
 10. commit-10: Change from Class Components to Functional Components - adding hooks - useState
+11. commit-11: Adding hook - useEffect to fetchMonster Names
 =================================================================================
